--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./dist/main.js",
+  "main": "./build/index.js",
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production"
