--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./build/index.js",
+  "main": "./index.js",
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production"
@@ -27,6 +27,8 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@wordpress/html-entities": "^3.2.3",
     "@wordpress/i18n": "^4.2.4",
     "react": "^16.12.0",
