--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./build/index.js",
+  "main": "./index.js",
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production"
@@ -30,6 +30,7 @@
     "@wordpress/html-entities": "^3.2.3",
     "@wordpress/i18n": "^4.2.4",
     "react": "^16.12.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "use-debounce": "^7.0.1"
   }
 }
