--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./index.js",
+  "main": "./build/index.js",
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production"
@@ -14,17 +14,23 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.2.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.0.10",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.3.0",
     "sass": "^1.32.0",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^1.0.1",
-    "svg-url-loader": "^7.1.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "sass-loader": "^10.2.0",
+    "autoprefixer": "^9.8.8",
+    "postcss-cli": "^9.1.0",
+    "precss": "^4.0.0"
   },
   "dependencies": {
     "@wordpress/html-entities": "^3.2.3",
