--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./build/index.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "webpack --watch --mode development",
-    "build": "webpack --mode production"
+    "start": "npm run tailwind:watch && webpack --watch --mode development",
+    "build": "webpack --mode production",
+    "tailwind:watch": "npx tailwindcss -i ./src/style.css -o ./src/tailwind.css --watch"
   },
   "keywords": [
     "reactjs",
@@ -16,21 +17,21 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.7.4",
+    "autoprefixer": "^9.8.8",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.2.0",
+    "precss": "^4.0.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.10",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "@babel/preset-react": "^7.7.4",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.2.0",
-    "autoprefixer": "^9.8.8",
-    "postcss-cli": "^9.1.0",
-    "precss": "^4.0.0"
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "@wordpress/html-entities": "^3.2.3",
