--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
-  "main": "./build/index.js",
+  "main": "./index.js",
   "scripts": {
     "start": "webpack serve --mode=development --open",
     "build": "webpack --mode production",
