Removed unwanted files.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "Starter Templates Component Library.",
   "main": "./build/index.js",
   "scripts": {
-    "start": "webpack serve --mode=development --open",
-    "build": "webpack --mode production",
-    "tailwind:watch": "npx tailwindcss -i ./src/style.css -o ./src/tailwind.css --watch"
+    "start": "webpack --watch --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
     "reactjs",
@@ -15,24 +14,17 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
-    "autoprefixer": "^9.8.8",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^9.1.0",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.2.0",
-    "precss": "^4.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.3.0",
     "sass": "^1.32.0",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.10",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
+    "sass-loader": "^10.1.0",
+    "style-loader": "^1.0.1",
+    "svg-url-loader": "^7.1.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@wordpress/html-entities": "^3.2.3",
