Name of the package is @brainstormforce/starter-templates-components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-templates-components",
+  "name": "@brainstormforce/starter-templates-components",
   "version": "1.0.0",
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
