--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       if: always()
       uses: EndBug/add-and-commit@v8.0.2
       with:
-          add: 'inc/lib/onboarding/*.js'
+          add: 'src/*.js'
           default_author: github_actor
           message: 'Commit ESLint auto fixes'
           pathspec_error_handling: exitAtEnd
