--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "author": "Brainstorm Force",
   "description": "Starter Templates Component Library.",
   "main": "./build/index.js",
+  "engines": {
+		"npm": ">=9.5.0 <10.3.0",
+		"node": ">=18.15.0 <19.0.0"
+	},
+  "volta": {
+		"node": "18.15.0"
+	},
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production",
@@ -20,7 +27,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@wordpress/scripts": "^14.1.0",
+    "@wordpress/scripts": "^26.19.0",
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
@@ -30,8 +37,8 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^1.0.1",
     "svg-url-loader": "^7.1.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "prettier": "npm:wp-prettier@^2.2.1-beta-1"
   },
   "dependencies": {
