--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "svg-url-loader": "^7.1.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "prettier": "npm:wp-prettier@^2.2.1-beta-1"
+    "wp-prettier": "^2.8.5"
   },
   "dependencies": {
     "@wordpress/html-entities": "^3.2.3",
