--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "description": "Starter Templates Component Library.",
   "main": "./build/index.js",
   "engines": {
-		"npm": ">=9.5.0 <10.3.0",
-		"node": ">=18.15.0 <19.0.0"
-	},
+    "npm": ">=9.5.0 <10.3.0",
+    "node": ">=18.15.0 <19.0.0"
+  },
   "volta": {
-		"node": "18.15.0"
-	},
+    "node": "18.15.0"
+  },
   "scripts": {
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production",
@@ -27,10 +27,10 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@wordpress/scripts": "^26.19.0",
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@wordpress/scripts": "^26.19.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.3.0",
     "sass": "^1.32.0",
@@ -44,6 +44,7 @@
   "dependencies": {
     "@wordpress/html-entities": "^3.2.3",
     "@wordpress/i18n": "^4.2.4",
+    "react": "^18.2.0",
     "react-dom": "^18.0.8",
     "use-debounce": "^7.0.1"
   }
